<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@android:color/darker_gray"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="4dp">

            <Button
                android:id="@+id/buttonX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" x " />

            <Button
                android:id="@+id/buttonLeftBracket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" ( " />

            <Button
                android:id="@+id/buttonABS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="|a|" />

            <Button
                android:id="@+id/buttonA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" A " />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="3.5dp">

            <Button
                android:id="@+id/buttonY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" y " />

            <Button
                android:id="@+id/buttonRightBracket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" ) " />

            <Button
                android:id="@+id/buttonSQRT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" √ " />

            <Button
                android:id="@+id/buttonB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" B " />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="3.5dp">

            <Button
                android:id="@+id/buttonpowA2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="a² " />

            <Button
                android:id="@+id/buttonLess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="@string/less" />

            <Button
                android:id="@+id/buttonLessSame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="@string/lessSame" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" C " />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/buttonpowAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="aᵇ " />

            <Button
                android:id="@+id/buttonMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="@string/more" />

            <Button
                android:id="@+id/buttonMoreSame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="@string/moreSame" />

            <Button
                android:id="@+id/buttonD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" D " />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="4dp">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" 7 " />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" 4 " />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" 1 " />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" 0 " />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="3.5dp">

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" 8 " />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" 5 " />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" 2 " />

            <Button
                android:id="@+id/buttonDROB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" . " />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="3.5dp">

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" 9 " />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" 6 " />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" 3 " />

            <Button
                android:id="@+id/buttonRAVNO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" = " />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/buttonDIVIDE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" ÷ " />

            <Button
                android:id="@+id/buttonMULTIPLY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" × " />

            <Button
                android:id="@+id/buttonMINUS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" - " />

            <Button
                android:id="@+id/buttonPLUS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" + " />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="5dp">

            <Button
                android:id="@+id/buttonSIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="sin" />

            <Button
                android:id="@+id/buttonCOS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="cos" />

            <Button
                android:id="@+id/buttonTG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="tg " />

            <Button
                android:id="@+id/buttonCTG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="ctg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="5dp">

            <Button
                android:id="@+id/buttonLeftMOVE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="@string/left" />

            <Button
                android:id="@+id/buttonRightMOVE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="@string/right" />

            <Button
                android:id="@+id/buttonDeleteSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" ⌦ " />

            <Button
                android:id="@+id/buttonCOMPLETE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="ent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="5dp">

            <Button
                android:id="@+id/buttonpowSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="set" />

            <Button
                android:id="@+id/buttonHOME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="hom" />

            <Button
                android:id="@+id/buttonSQRTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text="ᵇ√ " />

            <Button
                android:id="@+id/buttonE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="1dp"
                android:minHeight="1dp"
                android:padding="5dp"
                android:text=" E " />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>